knxd (0.9.2-1) unstable; urgency=medium

  * Fix knxtool packaging
  * Create "home" directory

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 12 Jul 2015 06:56:18 +0200

knxd (0.9.1-3) unstable; urgency=medium

  * Conflict with eibd.

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 28 Jun 2015 14:36:42 +0200

knxd (0.9.1-2) unstable; urgency=medium

  * Build fixes

 -- Matthias Urlichs <matthias@urlichs.de>  Sat, 27 Jun 2015 20:24:46 +0200

knxd (0.9.1-1) unstable; urgency=medium

  * Release. (Sort of.)
  * Bugs fixed.

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 18 May 2015 07:24:02 +0200

knxd (0.9.0-1) unstable; urgency=low

  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>

 -- Timo <knxd@timo-wingender.de>  Tue, 16 Dec 2014 12:55:54 +0100